Added XRInteractible support

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.xr.arcore": "4.1.7",
     "com.unity.xr.arfoundation": "4.1.7",
     "com.unity.xr.arkit": "4.1.7",
+    "com.unity.xr.interaction.toolkit": "2.0.0-pre.5",
     "com.unity.xr.magicleap": "6.2.2",
     "com.unity.xr.management": "4.0.7",
     "com.unity.xr.windowsmr": "4.5.0",
